# run-if

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
benches/: hashing.rs
doc/examples/: dodo.py  justfile
doc/examples/demo/: run.sh
run_if_changed/: change_detection.py  cli.py
scripts/: bootstrap  check-tools
src/: change_detection.rs  main.rs  utils.rs
src/run_if_changed/: cli.py
tests/: basic-usage.t  cli.rs  shell-builtins.t  test_change_detection.py  test_cli.py
tests/cram/: basic_usage.t  deps_and_targets_as_args.t  dirs_as_deps.t  errors.t  targets_and_sentinals.t  try_until_success.t
tests/workspace/: .gitignore  make-large-dir.py  run-benchmarks.sh
