[package]
name = "run-if"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "hashing"
harness = false

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0.135"
tempfile = "3.15.0"
serde = {version = "1.0.217", features = ["derive"] }
log = "0.4.24"
hex = "0.4.3"
criterion = "0.5.1"
dpc-pariter = "0.5.1"
env_logger = "0.11.6"
itertools = "0.14.0"
blake3 = "1.5.5"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
