[project]
name = "run-if-changed"
version = "0.5.2"
description = ""
authors = [{name = "CD Clark III",email = "clifton.clark@gmail.com"}]
readme = "README.md"
dependencies = ["typer>=0.12.3,<0.13.0", "filelock>=3.16.1,<4.0.0"]
requires-python = ">=3.10,<4.0"

[tool]

[tool.uv]
managed = true
dev-dependencies = [
    "cram>=0.7",
    "pytest>=8.2.2,<9.0.0",
]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/run_if_changed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
"run-if" = "run_if_changed.cli:app"
